# whisper-net

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pom.xml  pyproject.toml
docker/: api-service.Dockerfile  simulation-service.Dockerfile
docs/: simulation-service-testing.md
src/api-service/: pom.xml
src/api-service/src/main/java/com/whispernetwork/api/: ApiServiceApplication.java
src/api-service/src/main/java/com/whispernetwork/api/config/: RabbitMqTopologyConfig.java
src/api-service/src/main/resources/: application-dev.yml  application.yml
src/interpretation-service/: pyproject.toml
src/interpretation-service/wni/: __main__.py
src/proto-schema/: pom.xml
src/shared-kernel/: pom.xml
src/simulation-service/: pom.xml
src/simulation-service/src/main/java/com/whispernetwork/simulation/: SimulationServiceMain.java
src/web-ui/: .eslintrc.cjs  package-lock.json  package.json  vite.config.ts
src/web-ui/app/: app.css  root.tsx
src/web-ui/app/routes/: home.tsx
src/web-ui/components/home/: AgentListSection.tsx  AgentRowCard.tsx  CreateAgentModal.tsx  GraphCanvas.tsx  HomePageShell.tsx  RelationshipComposerPanel.tsx  RelationshipListSection.tsx  SidePanelDrawer.tsx  SubTabNav.tsx  TopTabs.tsx
src/web-ui/lib/: api-client.ts
src/web-ui/services/: networkSse.ts  simulationSse.ts
src/web-ui/store/: hooks.ts  index.ts
src/web-ui/store/slices/: agents-slice.ts  graph-slice.ts  relationships-slice.ts  simulation-slice.ts
src/web-ui/types/: api.ts  ui.ts
(+162 files in other folders)
