[project]
name = "whisper-net-interpretation-service"
version = "0.1.0"
description = "Interpretation service for WhisperNet - consumes opinion updates and publishes compact interpretations"
requires-python = ">=3.10"
dependencies = [
    "repid[amqp]>=0.1.0",
    "pydantic>=2.0.0",
    "SQLAlchemy>=2.0.30",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
